<resources>
    <string name="app_name">ED</string>

    <string name="navigation_drawer_open">展开侧滑菜单</string>
    <string name="navigation_drawer_close">收起侧滑菜单</string>


    <string name="title_activity_settings">Settings</string>

    <string name="action_settings">设置</string>
    <string name="action_searching">搜索</string>


    <string name="camera">相机</string>
    <string name="gallery">画廊</string>
    <string name="slideshow">幻灯片</string>
    <string name="tools">工具</string>

    <string name="communicate">Communicate</string>
    <string name="share">分享</string>
    <string name="send">发送</string>

    <string name="settings">设置</string>
    <string name="laboratory">laboratory</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string name="pref_header_Theme">主题</string>

    <string name="pref_header_general">通用</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">名称</string>
    <string name="pref_default_display_name">约翰史密斯</string>

    <string name="pref_title_add_friends_to_messages">添加好友</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">数据 &amp; 同步</string>

    <string name="pref_title_sync_frequency">刷新频率</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">系统同步设置</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">通知</string>

    <string name="pref_title_new_message_notifications">消息提醒</string>

    <string name="pref_title_ringtone">铃声</string>
    <string name="pref_ringtone_silent">静音</string>
    <string name="pref_title_vibrate">震动</string>
    <string name="personinfo">呼吸决定 - FINE乐团
词：刘冠南
曲：刘冠南
嗨 怎么那么坏
才两天就深爱
说的好像真爱
我对你说嗨
今天有没有恋爱
是否谈了又甩
还说难遇真爱
我要你现在
把丑事都说出来
才会听你表白
听你说你是真的喜欢我
真的想谈恋爱了
那就让情绪决定
听呼吸频率
跟感觉旅行
大不了不谈感情
Just do what I suppose to do
你也不用再演戏
怪我不爱你
是你的决定
每句话在我心里
清清楚楚的说你想离去
我要你现在
把丑事都说出来
才会听你表白
听你说你是真的喜欢我
真的想谈恋爱了
那就让情绪决定
听呼吸频率
跟感觉旅行
大不了不谈感情
Just do what I suppose to do
你也不用再演戏
怪我不爱你
是你的决定
每句话在我心里
清清楚楚的说你想离去
    嗨 怎么那么坏
才两天就深爱
说的好像真爱
我对你说嗨
今天有没有恋爱
是否谈了又甩
还说难遇真爱
我要你现在
把丑事都说出来
才会听你表白
听你说你是真的喜欢我
真的想谈恋爱了
那就让情绪决定
听呼吸频率
跟感觉旅行
大不了不谈感情
Just do what I suppose to do
你也不用再演戏
怪我不爱你
是你的决定
每句话在我心里
清清楚楚的说你想离去
我要你现在
把丑事都说出来
才会听你表白
听你说你是真的喜欢我
真的想谈恋爱了
那就让情绪决定
听呼吸频率
跟感觉旅行
大不了不谈感情
Just do what I suppose to do
你也不用再演戏
怪我不爱你
是你的决定
每句话在我心里
清清楚楚的说你想离去
    嗨 怎么那么坏
才两天就深爱
说的好像真爱
我对你说嗨
今天有没有恋爱
是否谈了又甩
还说难遇真爱
我要你现在
把丑事都说出来
才会听你表白
听你说你是真的喜欢我
真的想谈恋爱了
那就让情绪决定
听呼吸频率
跟感觉旅行
大不了不谈感情
Just do what I suppose to do
你也不用再演戏
怪我不爱你
是你的决定
每句话在我心里
清清楚楚的说你想离去
我要你现在
把丑事都说出来
才会听你表白
听你说你是真的喜欢我
真的想谈恋爱了
那就让情绪决定
听呼吸频率
跟感觉旅行
大不了不谈感情
Just do what I suppose to do
你也不用再演戏
怪我不爱你
是你的决定
每句话在我心里
清清楚楚的说你想离去</string>
    <string name="main_fab_transition_name">start_notify_activity</string>
    <string name="line">line</string>
    <string name="gank">Gank</string>
    <string name="title_activity_gank">GankActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="alarm">闹钟</string>
    <string name="about">关于</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="title_activity_file_system">FileSystemActivity</string>
    <string name="title_activity_file_system2">FileSystemActivity2</string>

</resources>
