<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="功能">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_alarm"
                    android:icon="@drawable/ic_alarm_black_24dp"
                    android:title="@string/alarm"
                    />
                <item
                    android:id="@+id/nav_camera"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/camera"/>
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/gallery"/>
                <item android:id="@+id/nav_mine"
                      android:icon="@drawable/ic_menu_gallery"
                      android:title=""

                    />



                <!--<item-->
                <!--android:id="@+id/nav_line"-->
                <!--android:icon="@drawable/ic_linear_scale_black_24dp"-->
                <!--android:title="@string/line"/>-->
                <!--<item-->
                <!--android:id="@+id/nav_gank"-->
                <!--android:icon="@drawable/ic_favorite_black_24dp"-->
                <!--android:title="@string/gank"/>-->
        </group>

        </menu>

    </item>




    <!--<item android:title="@string/communicate">-->
        <!--<menu>-->

            <!--&lt;!&ndash;<item&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/nav_send"&ndash;&gt;-->
                <!--&lt;!&ndash;android:icon="@drawable/ic_menu_send"&ndash;&gt;-->
                <!--&lt;!&ndash;android:title="@string/send"/>&ndash;&gt;-->
        <!--</menu>-->
    <!--</item>-->
    <item android:title="@string/laboratory">
        <menu>
            <item
            android:id="@+id/nav_diy"
            android:icon="@drawable/ic_menu_movie_creation"
            android:title="DIY Views"/>
            <item
                android:id="@+id/nav_sensor"
                android:icon="@drawable/ic_track_changes_black_24dp"
                android:title="Sensor"/>
            <item
                android:id="@+id/nav_hor"
                android:icon="@drawable/ic_menu_more_horiz"
                android:title="VerScrollViewTestCase"/>
            <item
                android:id="@+id/nav_ver"
                android:icon="@drawable/ic_menu_more_vert"
                android:title="HorScrollViewTestCase"/>
        </menu>
    </item>

<item android:title="more">
    <menu >
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings"/>
    </menu>
</item>

</menu>
